try to fix layout on Firefox PWA
navbar goes behind punchout camera

--- a/index.css
+++ b/index.css
@@ -92,6 +92,7 @@ body {
   font-feature-settings: "ss03";
   background: var(--background);
   color: var(--foreground);
+  padding-top: env(safe-area-inset-top);
 }
 
 div,
